--- a/PortFolion/PortFolion/App.xaml
+++ b/PortFolion/PortFolion/App.xaml
@@ -1,9 +1,17 @@
 ﻿<Application x:Class="PortFolion.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views\MainWindow.xaml"
+             StartupUri="Views\ModernMainWindow.xaml"
              Startup="Application_Startup">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <Style TargetType="{x:Type Window}">
+                <Setter Property="FontSize" Value="18" />
+            </Style>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.xaml" />
+                <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.Dark.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
