--- a/PortFolion/PortFolion/Views/ModernMainWindow.xaml
+++ b/PortFolion/PortFolion/Views/ModernMainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<mui:ModernWindow x:Class="PortFolion.Views.ModernMainWindow"
+﻿<Controls:MetroWindow x:Class="PortFolion.Views.ModernMainWindow"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                  xmlns:mui="http://firstfloorsoftware.com/ModernUI"
+                  xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
         xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
@@ -11,8 +11,8 @@
         xmlns:vm="clr-namespace:PortFolion.ViewModels"
                   mc:Ignorable="d" 
                   d:DesignHeight="200" d:DesignWidth="500"
-                  Title="PortFolion" 
-                  Style="{StaticResource BlankWindow}">
+                  TitleCaps="False"
+                  Title="PortFolion" >
 
     <Window.DataContext>
         <vm:MainWindowViewModel/>
@@ -20,9 +20,9 @@
 
     <i:Interaction.Triggers>
 
-        <!--Viewに特別な要件が存在しない限りは、トリガーやアクションの自作にこだわらず積極的にコードビハインドを使いましょう -->
-        <!--Viewのコードビハインドは、基本的にView内で完結するロジックとViewModelからのイベントの受信(専用リスナを使用する)に限るとトラブルが少なくなります -->
-        <!--Livet1.1からはコードビハインドでViewModelのイベントを受信するためのWeakEventLisnterサポートが追加されています -->
+        <!--Viewに特別な要件が存在しない限りは、トリガーやアクションの自作にこだわらず積極的にコードビハインドを使いましょう 
+        Viewのコードビハインドは、基本的にView内で完結するロジックとViewModelからのイベントの受信(専用リスナを使用する)に限るとトラブルが少なくなります 
+        Livet1.1からはコードビハインドでViewModelのイベントを受信するためのWeakEventLisnterサポートが追加されています--> 
 
         <!--WindowのContentRenderedイベントのタイミングでViewModelのInitializeメソッドが呼ばれます-->
         <i:EventTrigger EventName="ContentRendered">
@@ -46,7 +46,7 @@
     </Window.Resources>
 
     <DockPanel LastChildFill="False">
-        <Menu DockPanel.Dock="Top" Background="{x:Null}" FontSize="16">
+        <Menu DockPanel.Dock="Top" Background="{x:Null}" >
             <Menu.Foreground>
                 <SolidColorBrush Color="Black"/>
             </Menu.Foreground>
@@ -66,4 +66,4 @@
         </StatusBar>
 
     </DockPanel>
-</mui:ModernWindow>
+</Controls:MetroWindow>
