--- a/PortFolion/PortFolion/Views/GraphTab.xaml
+++ b/PortFolion/PortFolion/Views/GraphTab.xaml
@@ -8,6 +8,21 @@
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        
+        <Expander Grid.Column="0" ExpandDirection="Right" Controls:ControlsHelper.ContentCharacterCasing="Normal">
+            <Expander.Header>
+                <TextBlock Text="Location" TextAlignment="Right">
+                    <TextBlock.LayoutTransform>
+                        <RotateTransform Angle="-90"/>
+                    </TextBlock.LayoutTransform>
+                </TextBlock>
+            </Expander.Header>
+             <!--ここにコンテンツ-->
+        </Expander>
+        <local:GraphContents Grid.Column="1"/>
     </Grid>
 </UserControl>
