--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -4,9 +4,58 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortFolion.Views"
+             xmlns:tree="clr-namespace:System.Windows.Controls;assembly=TreeListView"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
+        <tree:TreeListView>
+            <tree:TreeListView.Resources>
+                <Style TargetType="ToggleButton">
+
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ToggleButton">
+                                <Border Width="9"
+                        Height="9"
+                        Background="Transparent">
+                                    <Border Width="9"
+                          Height="9"
+                          BorderThickness="1"
+                          BorderBrush="#FF7898B5"
+                          CornerRadius="1"
+                          SnapsToDevicePixels="true">
+                                        <Border.Background>
+                                            <LinearGradientBrush StartPoint="0,0"
+                                           EndPoint="1,1">
+                                                <LinearGradientBrush.GradientStops>
+                                                    <GradientStop Color="White"
+                                        Offset=".2"/>
+                                                    <GradientStop Color="#FFC0B7A6"
+                                        Offset="1"/>
+                                                </LinearGradientBrush.GradientStops>
+                                            </LinearGradientBrush>
+                                        </Border.Background>
+                                        <Path x:Name="ExpandPath"
+                          Margin="1,1,1,1"
+                          Fill="Black"
+                          Data="M 0 2 L 0 3 L 2 3 L 2 5 L 3 5 L 3 3 L 5 3 L 5 2 L 3 2 L 3 0 L 2 0 L 2 2 Z"/>
+                                    </Border>
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsChecked"
+                           Value="True">
+
+                                        <Setter Property="Data"
+                            TargetName="ExpandPath"
+                            Value="M 0 2 L 0 3 L 5 3 L 5 2 Z"/>
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </tree:TreeListView.Resources>
             
+        </tree:TreeListView>
     </Grid>
 </UserControl>
