--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -8,46 +8,50 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <tree:TreeListView>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel x:Name="Links" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
+            
+        </StackPanel>
+        <TextBlock x:Name="Date" Grid.Row="0" Grid.Column="1" Text="{Binding CurrentDate}"/>
+        <Button Grid.Row="0" Grid.Column="2" Content="新規追加"/>
+        <tree:TreeListView x:Name="Location" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" ><!-- Style="{StaticResource VirtualisedMetroTreeView}"-->
             <tree:TreeListView.Resources>
                 <Style TargetType="ToggleButton">
-
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="ToggleButton">
                                 <Border Width="9"
-                        Height="9"
-                        Background="Transparent">
-                                    <Border Width="9"
-                          Height="9"
-                          BorderThickness="1"
-                          BorderBrush="#FF7898B5"
-                          CornerRadius="1"
-                          SnapsToDevicePixels="true">
+                                        Height="9"
+                                        Background="Transparent">
+                                    <Border Width="9" Height="9" BorderThickness="1"
+                                            BorderBrush="#FF7898B5" CornerRadius="1" SnapsToDevicePixels="true">
                                         <Border.Background>
                                             <LinearGradientBrush StartPoint="0,0"
-                                           EndPoint="1,1">
+                                                       EndPoint="1,1">
                                                 <LinearGradientBrush.GradientStops>
                                                     <GradientStop Color="White"
-                                        Offset=".2"/>
+                                                    Offset=".2"/>
                                                     <GradientStop Color="#FFC0B7A6"
-                                        Offset="1"/>
+                                                    Offset="1"/>
                                                 </LinearGradientBrush.GradientStops>
                                             </LinearGradientBrush>
                                         </Border.Background>
-                                        <Path x:Name="ExpandPath"
-                          Margin="1,1,1,1"
-                          Fill="Black"
-                          Data="M 0 2 L 0 3 L 2 3 L 2 5 L 3 5 L 3 3 L 5 3 L 5 2 L 3 2 L 3 0 L 2 0 L 2 2 Z"/>
+                                        <Path x:Name="ExpandPath" Margin="1,1,1,1" Fill="Black"
+                                              Data="M 0 2 L 0 3 L 2 3 L 2 5 L 3 5 L 3 3 L 5 3 L 5 2 L 3 2 L 3 0 L 2 0 L 2 2 Z"/>
                                     </Border>
                                 </Border>
                                 <ControlTemplate.Triggers>
-                                    <Trigger Property="IsChecked"
-                           Value="True">
-
-                                        <Setter Property="Data"
-                            TargetName="ExpandPath"
-                            Value="M 0 2 L 0 3 L 5 3 L 5 2 Z"/>
+                                    <Trigger Property="IsChecked" Value="True">
+                                        <Setter Property="Data" TargetName="ExpandPath"
+                                            Value="M 0 2 L 0 3 L 5 3 L 5 2 Z"/>
                                     </Trigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
