--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -5,61 +5,98 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortFolion.Views"
              xmlns:tree="clr-namespace:System.Windows.Controls;assembly=TreeListView"
+             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="600" d:DesignWidth="600">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <StackPanel x:Name="Links" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
-            
-        </StackPanel>
-        <TextBlock x:Name="Date" Grid.Row="0" Grid.Column="1" Text="{Binding CurrentDate}"/>
-        <Button Grid.Row="0" Grid.Column="2" Content="新規追加"/>
-        <tree:TreeListView x:Name="Location" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" ><!-- Style="{StaticResource VirtualisedMetroTreeView}"-->
-            <tree:TreeListView.Resources>
-                <Style TargetType="ToggleButton">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="ToggleButton">
-                                <Border Width="9"
+      
+        <Expander Grid.Column="0" IsExpanded="False" ExpandDirection="Right" Controls:ControlsHelper.ContentCharacterCasing="Normal">
+            <Expander.Header>
+                <TextBlock Text="Date" TextAlignment="Left">
+                    <TextBlock.LayoutTransform>
+                        <RotateTransform Angle="90"/>
+                    </TextBlock.LayoutTransform>
+                </TextBlock>
+            </Expander.Header>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <TreeView Grid.Row="0" x:Name="DateLists"></TreeView>
+                
+                <StackPanel Orientation="Horizontal" Grid.Row="1" VerticalAlignment="Top" Margin="0" HorizontalAlignment="Center">
+                    <DatePicker
+                        x:Name="PickedDate"
+                        Margin="5, 10"
+                        HorizontalAlignment="Center"
+                        Controls:TextBoxHelper.UseFloatingWatermark="True"
+                        Controls:TextBoxHelper.Watermark="Select a date" />
+                    <Button Content="新規追加" HorizontalAlignment="Center"
+                            Margin="5,10"
+                            Command="{Binding AddNewRoot}"
+                            CommandParameter="{Binding ElementName=PickedDate, Path=SelectedDate}"/>
+                </StackPanel>
+            </Grid>
+        </Expander>
+
+        <StackPanel Orientation="Vertical" Grid.Column="1">
+            <TextBlock x:Name="Date" Text="{Binding CurrentDate}"/>
+            <ToolBar>
+                <Button Content="全開"/>
+                <Button Content="全閉"/>
+            </ToolBar>
+            <tree:TreeListView x:Name="LocationTree">
+                <!-- Style="{StaticResource VirtualisedMetroTreeView}"-->
+                <tree:TreeListView.Resources>
+                    <Style TargetType="ToggleButton">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="ToggleButton">
+                                    <Border Width="9"
                                         Height="9"
                                         Background="Transparent">
-                                    <Border Width="9" Height="9" BorderThickness="1"
+                                        <Border Width="9" Height="9" BorderThickness="1"
                                             BorderBrush="#FF7898B5" CornerRadius="1" SnapsToDevicePixels="true">
-                                        <Border.Background>
-                                            <LinearGradientBrush StartPoint="0,0"
-                                                       EndPoint="1,1">
-                                                <LinearGradientBrush.GradientStops>
-                                                    <GradientStop Color="White"
+                                            <Border.Background>
+                                                <LinearGradientBrush StartPoint="0,0"
+                                                        EndPoint="1,1">
+                                                    <LinearGradientBrush.GradientStops>
+                                                        <GradientStop Color="White"
                                                     Offset=".2"/>
-                                                    <GradientStop Color="#FFC0B7A6"
+                                                        <GradientStop Color="#FFC0B7A6"
                                                     Offset="1"/>
-                                                </LinearGradientBrush.GradientStops>
-                                            </LinearGradientBrush>
-                                        </Border.Background>
-                                        <Path x:Name="ExpandPath" Margin="1,1,1,1" Fill="Black"
-                                              Data="M 0 2 L 0 3 L 2 3 L 2 5 L 3 5 L 3 3 L 5 3 L 5 2 L 3 2 L 3 0 L 2 0 L 2 2 Z"/>
+                                                    </LinearGradientBrush.GradientStops>
+                                                </LinearGradientBrush>
+                                            </Border.Background>
+                                            <Path x:Name="ExpandPath" Margin="1,1,1,1" Fill="Black"
+                                                Data="M 0 2 L 0 3 L 2 3 L 2 5 L 3 5 L 3 3 L 5 3 L 5 2 L 3 2 L 3 0 L 2 0 L 2 2 Z"/>
+                                        </Border>
                                     </Border>
-                                </Border>
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsChecked" Value="True">
-                                        <Setter Property="Data" TargetName="ExpandPath"
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsChecked" Value="True">
+                                            <Setter Property="Data" TargetName="ExpandPath"
                                             Value="M 0 2 L 0 3 L 5 3 L 5 2 Z"/>
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </tree:TreeListView.Resources>
-            
-        </tree:TreeListView>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </tree:TreeListView.Resources>
+
+            </tree:TreeListView>
+            <Grid x:Name="PortFolioResult"></Grid>
+        </StackPanel>
+        <StackPanel Orientation="Vertical" Grid.Column="2">
+            <TextBlock Text="{Binding Path}"/>
+            <DataGrid x:Name="History" ></DataGrid>
+        </StackPanel>
     </Grid>
 </UserControl>
