--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortFolion.Views"
+             xmlns:model="clr-namespace:PortFolion.Models"
              xmlns:converter="clr-namespace:PortFolion.Views.Converter"
              xmlns:tree="clr-namespace:System.Windows.Controls;assembly=TreeListView"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
@@ -33,7 +34,25 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TreeView Grid.Row="0" x:Name="DateLists"></TreeView>
+                <TreeView Grid.Row="0" x:Name="DateLists">
+                    <TreeView.ItemContainerStyle>
+                        <Style TargetType="{x:Type TreeViewItem}">
+                            <Setter Property="IsSelected" Value="{Binding IsSelected,Mode=TwoWay}"/>
+                            <Setter Property="IsExpanded" Value="{Binding IsExpand,Mode=TwoWay}"/>
+                            <Setter Property="FontWeight" Value="Normal" />
+                            <Style.Triggers>
+                                <Trigger Property="IsSelected" Value="True">
+                                    <Setter Property="FontWeight" Value="Bold" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TreeView.ItemContainerStyle>
+                    <TreeView.ItemTemplate>
+                        <HierarchicalDataTemplate DataType="model:DateTree" ItemsSource="{Binding Children}">
+                            <TextBlock Text="{Binding Display}"/>
+                        </HierarchicalDataTemplate>
+                    </TreeView.ItemTemplate>
+                </TreeView>
                 
                 <StackPanel Orientation="Horizontal" Grid.Row="1" VerticalAlignment="Top" Margin="0" HorizontalAlignment="Center">
                     <DatePicker
@@ -101,7 +120,14 @@
         <GridSplitter Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="5"/>
         <StackPanel Orientation="Vertical" Grid.Column="2">
             <TextBlock Text="{Binding Path,Converter={StaticResource PathToString}}" Margin="5"/>
-            <DataGrid x:Name="History" Margin="5" ></DataGrid>
+            <DataGrid x:Name="History" Margin="5" ItemsSource="{Binding History}" IsReadOnly="True" AutoGenerateColumns="False">
+                <DataGridTextColumn Header="日付" Binding="{Binding CurrentDate}"/>
+                <DataGridTextColumn Header="買付額(+)・売却額(-)" Binding="{Binding InvestmentValue}"/>
+                <DataGridTextColumn Header="買付数(+)・売却数(-)" Binding="{Binding TradeQuantity}"/>
+                <DataGridTextColumn Header="保有数" Binding="{Binding Quantity}"/>
+                <DataGridTextColumn Header="評価額" Binding="{Binding Amount}"/>
+                <DataGridTextColumn Header="含損益" Binding="{Binding ProfitLoss}"/>
+            </DataGrid>
         </StackPanel>
     </Grid>
 </UserControl>
