--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -118,15 +118,16 @@
             <Grid x:Name="PortFolioResult"></Grid>
         </StackPanel>
         <GridSplitter Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="5"/>
-        <StackPanel Orientation="Vertical" Grid.Column="2">
+        <StackPanel Orientation="Vertical" Grid.Column="2" Margin="5,0,0,0">
             <TextBlock Text="{Binding Path,Converter={StaticResource PathToString}}" Margin="5"/>
+            
             <DataGrid x:Name="History" Margin="5" ItemsSource="{Binding History}" IsReadOnly="True" AutoGenerateColumns="False">
                 <DataGridTextColumn Header="日付" Binding="{Binding CurrentDate}"/>
                 <DataGridTextColumn Header="買付額(+)・売却額(-)" Binding="{Binding InvestmentValue}"/>
                 <DataGridTextColumn Header="買付数(+)・売却数(-)" Binding="{Binding TradeQuantity}"/>
                 <DataGridTextColumn Header="保有数" Binding="{Binding Quantity}"/>
                 <DataGridTextColumn Header="評価額" Binding="{Binding Amount}"/>
-                <DataGridTextColumn Header="含損益" Binding="{Binding ProfitLoss}"/>
+                <DataGridTextColumn Header="含損益" Binding="{Binding UnrealizedProfitLoss}"/>
             </DataGrid>
         </StackPanel>
     </Grid>
