--- a/PortFolion/PortFolion/Views/ListTab.xaml
+++ b/PortFolion/PortFolion/Views/ListTab.xaml
@@ -9,12 +9,12 @@
              xmlns:tree="clr-namespace:System.Windows.Controls;assembly=TreeListView"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="600">
+             d:DesignHeight="600" d:DesignWidth="700">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Grid.Resources>
             <converter:PathToStringConverter x:Key="PathToString"/>
@@ -75,7 +75,7 @@
                 <Button Content="開"/>
                 <Button Content="閉"/>
             </ToolBar>
-            <tree:TreeListView x:Name="LocationTree">
+            <tree:TreeListView x:Name="LocationTree" AllowsColumnReorder="True" ItemsSource="{Binding Root.Children}">
                 <!-- Style="{StaticResource VirtualisedMetroTreeView}"-->
                 <tree:TreeListView.Resources>
                     <Style TargetType="ToggleButton">
@@ -113,7 +113,39 @@
                         </Setter>
                     </Style>
                 </tree:TreeListView.Resources>
-
+                <tree:TreeListView.ItemTemplate>
+                    <HierarchicalDataTemplate ItemsSource="{Binding Children}"/>
+                </tree:TreeListView.ItemTemplate>
+                <tree:TreeListView.Columns>
+                    <GridViewColumn Header="項目" Width="auto">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <tree:TreeListViewExpander/>
+                                    <TextBlock Text="{Binding Name}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="評価額" Width="auto">
+                        
+                    </GridViewColumn>
+                    <GridViewColumn Header="取引数" Width="auto">
+                        
+                    </GridViewColumn>
+                    <GridViewColumn Header="保有数" Width="auto">
+                        
+                    </GridViewColumn>
+                    <GridViewColumn Header="平均取得単価" Width="auto">
+                        
+                    </GridViewColumn>
+                    <GridViewColumn Header="現在単価" Width="auto">
+                        
+                    </GridViewColumn>
+                    <GridViewColumn Header="含み損益" Width="auto">
+                        
+                    </GridViewColumn>
+                </tree:TreeListView.Columns>
             </tree:TreeListView>
             <Grid x:Name="PortFolioResult"></Grid>
         </StackPanel>
