--- a/PortFolion/PortFolion/Views/AccountEditWindow.xaml
+++ b/PortFolion/PortFolion/Views/AccountEditWindow.xaml
@@ -11,7 +11,7 @@
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d" SaveWindowPosition="False"
         GlowBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
-        Title="AccountEdit" Height="350" Width="525">
+        Title="AccountEdit" Height="500" Width="800">
     
     <!--<Window.DataContext>
         <vm:AccountEditWindowViewModel/>
@@ -45,36 +45,74 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5">
             <TextBlock Text="AA" FontSize="40"/>
         </StackPanel>
         <WrapPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="total" Margin="5" FontSize="15" VerticalAlignment="Bottom"/>
-                <TextBlock Text="Sample" Margin="30,1,1,1" FontSize="25" VerticalAlignment="Center"/>
+            <StackPanel Orientation="Horizontal" Margin="0,0,30,0">
+                <TextBlock Text="total :" Margin="5" FontSize="15" VerticalAlignment="Bottom"/>
+                <TextBlock Text="Sample" Margin="10,1,1,1" FontSize="25" VerticalAlignment="Bottom"/>
             </StackPanel>
-            
+
+            <StackPanel Orientation="Horizontal" Margin="0,0,30,0">
+                <TextBlock Text="余力 :" Margin="5" FontSize="15" VerticalAlignment="Bottom"/>
+                <TextBox Text="Sample" Margin="5,1,1,1" FontSize="25" VerticalAlignment="Bottom"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="内、入金(+)または出金(-)額 :" Margin="5" FontSize="12" VerticalAlignment="Bottom"/>
+                <TextBox Text="100000" Margin="5,1,1,1" FontSize="25" VerticalAlignment="Bottom"/>
+            </StackPanel>
         </WrapPanel>
         <Grid Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center">
             <Button Content="単価更新" Margin="5,10,5,0"/>
         </Grid>
         <DataGrid Grid.Row="3" Grid.Column="0" ItemsSource="{Binding Elements}" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTemplateColumn Header="Symbol">
+                <DataGridTemplateColumn Header="銘柄・ポジション" >
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                <TextBlock Text="Code"/>
-                                <TextBlock Text="Symbol"/>
+                                <TextBlock Text="{Binding Code}" Margin="0,0,3,0"/>
+                                <TextBlock Text="{Binding Name}" Margin="0,0,3,0"/>
                                 <Button Content="▼"/>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="数量" CanUserSort="False" IsReadOnly="{Binding IsEditableQuantity}"/>
+                <DataGridTextColumn Header="現在単価" CanUserSort="False"/>
+                <DataGridTextColumn Header="取引数量" CanUserSort="False">
+                    <DataGridTextColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="取引数量" HorizontalAlignment="Center"/>
+                                <TextBlock Grid.Row="1" Text="買付(+) / 売却(-)" FontSize="8"/>
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTextColumn.HeaderTemplate>
+                </DataGridTextColumn>
+                <DataGridTextColumn CanUserSort="False">
+                    <DataGridTextColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <Grid >
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="取引額" HorizontalAlignment="Center"/>
+                                <TextBlock Grid.Row="1" Text="買付・入金(+) / 売却・出金(-)" FontSize="8"/>
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTextColumn.HeaderTemplate>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="保有数量" CanUserSort="False" IsReadOnly="{Binding IsEditableQuantity}"/>
+                <DataGridTextColumn Header="評価額" CanUserSort="False"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
