--- a/PortFolion/PortFolion/Views/AccountEditWindow.xaml
+++ b/PortFolion/PortFolion/Views/AccountEditWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Class="PortFolion.Views.AccountEditWindow"
+﻿<mah:MetroWindow x:Class="PortFolion.Views.AccountEditWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
@@ -8,7 +8,7 @@
         xmlns:vm="clr-namespace:PortFolion.ViewModels"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d" SaveWindowPosition="False"
         GlowBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
         Title="AccountEdit" Height="500" Width="800">
@@ -17,6 +17,10 @@
         <vm:AccountEditWindowViewModel/>
     </Window.DataContext>-->
     
+    <!--<mah:MetroWindow.CommandBindings>
+        <CommandBinding Command="OpenFlyoutCommand" Executed="CommandBinding_Executed"/>
+    </mah:MetroWindow.CommandBindings>-->
+
      <i:Interaction.Triggers>
      
      	<!--Viewに特別な要件が存在しない限りは、トリガーやアクションの自作にこだわらず積極的にコードビハインドを使いましょう -->
@@ -34,9 +38,36 @@
         </i:EventTrigger>
 
         <!--WindowのCloseキャンセル処理に対応する場合は、WindowCloseCancelBehaviorの使用を検討してください-->
+         
+        <l:InteractionMessageTrigger MessageKey="EditNodeName" Messenger="{Binding Messenger}">
+            <i:InvokeCommandAction Command="{x:Reference Name=OpenEditNodeNameFlyout}"/>
+        </l:InteractionMessageTrigger>
+         
+        <l:InteractionMessageTrigger MessageKey="EditEndNodeName" Messenger="{Binding Messenger}">
+            <i:InvokeCommandAction Command="{x:Reference Name=CloseEditNodeNameFlyout}"/>
+        </l:InteractionMessageTrigger>
+
 
     </i:Interaction.Triggers>
-    
+    <mah:MetroWindow.Flyouts>
+        <mah:FlyoutsControl>
+            <mah:Flyout x:Name="NameEditFlyout"
+                        IsModal="True"
+                        Header="名前の変更"
+                        Position="Right"
+                        CloseCommand="{Binding NodeNameEditer.CancelCmd}"
+                        AnimateOpacity="True">
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{Binding NodeNameEditer.PresentName}" HorizontalAlignment="Center"/>
+                    <TextBox  Text="{Binding NodeNameEditer.Name}" HorizontalAlignment="Center"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button Content="Cancel" Command="{Binding NodeNameEditer.CancelCmd}" HorizontalAlignment="Right"/>
+                        <Button Content="OK" Command="{Binding NodeNameEditer.ExecuteCmd}" HorizontalAlignment="Right"/>
+                    </StackPanel>
+                </StackPanel>
+            </mah:Flyout>
+        </mah:FlyoutsControl>
+    </mah:MetroWindow.Flyouts>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -123,4 +154,4 @@
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
-</Controls:MetroWindow>
+</mah:MetroWindow>
